sites/navy/clusters/dal-navy-core-1/wave-5/overlays/dolores-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: dolores-assistant
    app.kubernetes.io/name: dolores-assistant
  name: dolores-assistant
  namespace: dolores-assistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: dolores-assistant
    app.kubernetes.io/name: dolores-assistant
